# pyanki

./: .gitignore  1.txt  2.txt  3.txt  4.txt  README.md  app.js  index.html  pyproject.toml  style.css  text.txt
ankininja/: __init__.py  __main__.py  cli.py
cards/: grammar_vocab.txt  index.json  sentences_175.txt
