[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ankininja"
version = "0.1.0"
description = "Console Anki clone in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
ankininja = "ankininja.cli:main"
